--- a/buttons/styles.css
+++ b/buttons/styles.css
@@ -189,8 +189,7 @@ a#btn_cocacola {
 }
 
 a#btn_cocacola:hover {
-  animation: shake 0.5s ease infinite; /* Add the shake animation on hover */
-  /* color: #fff; */
+  animation: shake 0.5s ease infinite;
 }
 
 a#btn_cocacola:before {
@@ -202,7 +201,6 @@ a#btn_cocacola:before {
   position: absolute;
   top: 50%;
   left: 50%;
-  /* background-color: #dc0a0a; */
   transition: all 0.5s;
 }
 
@@ -222,45 +220,29 @@ a#btn_tesla {
   position: relative;
   margin: auto;
   margin-top: 100px;
-  padding: 8px 16px;
-  background-color: #000000; /* Tesla's branding color */
-  color: #ffffff; /* Text color */
-  font-size: 30px;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: -2px;
+  width: 50%;
+  /* height: 100px; */
+  background-size: cover;
+  background-position: center;
   transition: all 0.2s;
 }
 
-a#btn_tesla:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  z-index: 1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #000000;
-  transition: all 0.5s;
+a#btn_tesla img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 a#btn_tesla:hover {
-  color: #fff;
+  width: 90%;
+  margin-top: auto;
 }
 
-a#btn_tesla:hover:before {
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+a#btn_tesla:hover img {
+  width: 120%;
+  height: 120%;
 }
-a#btn_tesla span {
-  position: relative;
-  z-index: 10;
-  color: #fff;
-}
+
 a#btn_craigslist {
   display: inline-block;
   box-sizing: border-box;
@@ -306,12 +288,12 @@ a#btn_moo:hover {
   outline-width: 3px;
   line-height: 32px;
 }
-a#btn_npr {
+a#btn_nike {
   display: inline-block;
   height: 50px;
   box-sizing: border-box;
   margin: auto;
-  margin-top: 85px;
+  margin-top: 100px;
   color: black;
   font-size: 50px;
   font-family: "Ubuntu", sans-serif;
@@ -319,9 +301,147 @@ a#btn_npr {
   text-decoration: none;
   transition: all 0.6s;
 }
-a#btn_npr:hover {
-  color: red;
+a#btn_nike:hover {
+  color: rgb(126, 117, 117);
   font-size: 70px;
-
   transform: rotate(360deg);
+}
+
+#btn_stjude {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 15px 30px;
+  position: relative;
+  margin: auto;
+  margin-top: 100px;
+  font-size: 1.2rem;
+  color: #fff;
+  background-color: #ff6b6b;
+  font-family: "Arial", sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 2px solid #ff6b6b;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+  position: relative;
+}
+
+#btn_stjude::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #d01947, rgb(140, 46, 46));
+  border-radius: 5px;
+  z-index: -1;
+  transition: transform 0.3s;
+}
+
+#btn_stjude:hover {
+  background-color: #d01947;
+  color: #fff;
+}
+
+#btn_stjude:hover::before {
+  transform: scale(1.05);
+}
+a#btn_lyft {
+  display: block;
+  width: 100px;
+  height: 55px;
+  box-sizing: border-box;
+  padding-top: 2px;
+  margin: auto;
+  margin-top: 100px;
+  background-color: #ff00bf;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: bold;
+  border-radius: 15px;
+}
+
+a#btn_lyft:hover {
+  background-color: #01111f;
+  transition: 1s;
+}
+
+a#btn_facebook {
+  display: inline-block;
+  width: 160px;
+  height: 45px;
+  background-color: #4267b2;
+  color: #fff;
+  font-family: "Helvetica", Arial, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 120px;
+  line-height: 45px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+a#btn_facebook:hover {
+  background-color: #365899;
+  transform: scale(1.1);
+}
+
+a#btn_mollyjogger {
+  display: inline-block;
+  text-decoration: none;
+  padding: 0;
+  margin-top: 100px;
+  background: linear-gradient(to right, #059300, #c4ffbb, #059300, #c4ffbb);
+  background-size: 50% 3px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  color: #059300;
+  transition: background-size 400ms;
+  font-size: 40px;
+  font-family: "Noto Sans", sans-serif;
+}
+
+a#btn_mollyjogger:hover {
+  background-size: 100% 3px;
+}
+
+a#btn_mollyjogger::before {
+  bottom: 0;
+  height: 33%;
+  margin-top: 100px;
+}
+
+a#btn_colorrun {
+  display: inline-block;
+  padding-top: 105px;
+  color: #ff0000;
+  font-size: 50px;
+  font-family: "Arial", sans-serif;
+  font-weight: lighter;
+  text-decoration: none;
+  position: relative;
+}
+
+a#btn_colorrun::before {
+  content: "";
+  background-color: hsla(0, 100%, 75%, 0.75);
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  height: 8px;
+  z-index: -1;
+  transition: all 0.3s ease-in-out;
+}
+
+a#btn_colorrun:hover::before {
+  bottom: 0;
+  height: 33%;
+  margin-top: 20px;
 }
